# axum-rest-api

./: Cargo.toml  README.md
migrations/: 20250312180653_create_users.down.sql  20250312180653_create_users.up.sql
src/: main.rs
