[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "macros"]}
dotenvy = "0.15.7"
